--- a/icustom.web/pom.xml
+++ b/icustom.web/pom.xml
@@ -30,11 +30,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.security.config</artifactId>
 			<version>${project.version}</version>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
